# realsense_camera_wrapper

./: CMakeLists.txt  README.md  package.xml
include/realsense_camera/: realsense_camera.h
include/realsense_camera_wrapper/: realsense_camera.h  realsense_camera_device_wrapper.h  realsense_camera_ros.h
src/realsense_camera/: realsense_camera.cpp  realsense_camera_node.cpp  realsense_camera_node_2.cpp
src/realsense_camera_wrapper/: realsense_camera.cpp  realsense_camera_node.cpp
